AFS_Dev/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Summary_Customer__c</fullName>
        <formula>Account.Parent.Name</formula>
        <label>Summary Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCR_OI__c</fullName>
        <inlineHelpText>This formula field is a blended target OI% based on service group OI values and target OI%.</inlineHelpText>
        <label>TCR OI%</label>
        <summarizedField>Financial_Summary__c.OI__c</summarizedField>
        <summaryFilterItems>
            <field>Financial_Summary__c.Financial_Summary_Type__c</field>
            <operation>equals</operation>
            <value>Total</value>
        </summaryFilterItems>
        <summaryForeignKey>Financial_Summary__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TDP__c</fullName>
        <inlineHelpText>OI% over life of contract (including options)</inlineHelpText>
        <label>TDP OI%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEC_Opportunity_Name__c</fullName>
        <label>TEC Opportunity Name</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Technology_Account_Lead__c</fullName>
        <formula>Account.Technology_Account_Lead__r.FirstName &amp; &quot; &quot; &amp;  Account.Technology_Account_Lead__r.LastName</formula>
        <label>Technology Account Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>The_Opportunity_involves_activities_now__c</fullName>
        <inlineHelpText>RFP, RFQ or draft contract includes wording, i.e.,  EAR, ITAR, USML, TAA, export license exemption/exception, TCP.

Client has advised of certain export controls requirements, i.e., ITAR registration, Sublicensee NDA, export license exemption.</inlineHelpText>
        <label>Specify Other Export Related Language</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am not sure, please contact me</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ToT_Category__c</fullName>
        <inlineHelpText>&apos;This field is an admin-only field used to capture ToT category for the ToT report for AFS Sales Team. The category is designated when relevant opportunities are reviewed w/ Michael Fox and identifies whether we are actively working on it</inlineHelpText>
        <label>ToT Category</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Sub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watchlist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Opportunity__c</fullName>
        <inlineHelpText>Indicates if an opportunity is designated as an AFS or Portfolio Top Opportunity; these are identified by AFS and Portfolio Leadership.</inlineHelpText>
        <label>Top Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>AFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Current_Revenue__c</fullName>
        <inlineHelpText>The total sales number/booking for the entire opportunity. Total Current Revenue is a read-only field that is populated from the Financial Details Related List.</inlineHelpText>
        <label>Total Current Revenue</label>
        <summarizedField>OpportunityLineItem.Revenue__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Deal_Potential__c</fullName>
        <formula>Total_Current_Revenue__c   + Follow_On_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read only field that is summarized by the TCR + Follow On Revenue.</inlineHelpText>
        <label>Total Deal Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_WTD_Revenue__c</fullName>
        <formula>Probability  *  Total_Current_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is the Total Current Revenue multiplied by the Win Probability. This is a read-only field.</inlineHelpText>
        <label>Total WTD Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Assumed_to_be_Not_Billable__c</fullName>
        <inlineHelpText>Please indicate the percentage of non-billable/unallowable costs as a percentage of total revenue.</inlineHelpText>
        <label>% Nonbillable/Unallowable Costs as % TCR</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type_of_Work__c</fullName>
        <formula>IF(AND(Consulting_Total_Revenue__c&lt;&gt;0, Outsourcing_Total_Revenue__c&lt;&gt;0),&quot;C/O&quot;,
IF(AND(Consulting_Total_Revenue__c=0, Outsourcing_Total_Revenue__c&gt;0), &quot;O&quot;, 
IF(AND(Outsourcing_Total_Revenue__c=0,Consulting_Total_Revenue__c&gt;0), &quot;C&quot;,
IF(AND(Consulting_Total_Revenue__c=0, Outsourcing_Total_Revenue__c=0),&quot;&quot;,&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Work</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unallowable_ID__c</fullName>
        <inlineHelpText>The Unallowable ID for this opportunity to be edited by Project Accounting Users.</inlineHelpText>
        <label>Unallowable ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_Probability__c</fullName>
        <inlineHelpText>The likelihood of winning. Win Probability is linked to BPW. 
Worst Case: 70, 90, or 100% 
Probable Win: 50% or 70% 
Possible Loss: 35% or 50% 
Best Case: 10%</inlineHelpText>
        <label>Win Probability</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor__c</fullName>
        <inlineHelpText>If AFS lost the opportunity, list the winning competitor. This field is required if the Status/Stage Requested equals lost.</inlineHelpText>
        <label>Winning Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bain &amp; Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boeing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booz Allen Hamilton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Consulting Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CACI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capgemini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGI Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognizant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deloitte &amp; Touche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ernst &amp; Young</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Dynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infosys Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leidos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockheed Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mantech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maximus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mckinsey &amp; Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Won_Rate__c</fullName>
        <formula>IF (ISPICKVAL(Reporting_Status__c,&apos;Won&apos;), Total_Current_Revenue__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Won Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Opportunities8</fullName>
        <columns>Reporting_Status__c</columns>
        <columns>Portfolio__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Total_Current_Revenue__c</columns>
        <columns>Total_Deal_Potential__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Total_Current_Revenue__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>ECSD next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>Reporting_Status__c</columns>
        <columns>Portfolio__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Win_Probability__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Total_Current_Revenue__c</columns>
        <columns>Total_Deal_Potential__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Hierarchy_Level__c</columns>
        <columns>Best_Probable_Worst__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporting_Status__c</field>
            <operation>equals</operation>
            <value>Unqualified,Qualified</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>3. ECSD &lt; Month-End</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Total_Current_Revenue__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Opportunities I Own</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_Teams</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>Opportunity Teams I&apos;m On</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Total_Current_Revenue__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Opp_Wins_and_Losses_Current_FY</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Reporting_Status__c</columns>
        <columns>Win_Probability__c</columns>
        <columns>Total_Current_Revenue__c</columns>
        <columns>Total_WTD_Revenue__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Expected_Contract_Sign_Date_Quarter__c</columns>
        <columns>Financial_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporting_Status__c</field>
            <operation>equals</operation>
            <value>Client Withdrew,AFS Withdrew,Won,Lost</value>
        </filters>
        <filters>
            <field>Expected_Contract_Sign_Date_Quarter__c</field>
            <operation>equals</operation>
            <value>FY15-Q1,FY15-Q2,FY15-Q3,FY15-Q4</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012U00000001mIZ</value>
        </filters>
        <label>Opp Wins and Losses Current FY</label>
    </listViews>
    <listViews>
        <fullName>PSD_this_Month_Stage_2B</fullName>
        <columns>Reporting_Status__c</columns>
        <columns>Portfolio__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Win_Probability__c</columns>
        <columns>Proposal_Submission_Date__c</columns>
        <columns>Total_Current_Revenue__c</columns>
        <columns>Total_Deal_Potential__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Hierarchy_Level__c</columns>
        <columns>Best_Probable_Worst__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporting_Status__c</field>
            <operation>equals</operation>
            <value>Unqualified,Qualified</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>0,1A,1B,2A</value>
        </filters>
        <filters>
            <field>Proposal_Submission_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>2. PSD &lt; Month-End, Stage &lt; 2B</label>
    </listViews>
    <listViews>
        <fullName>Sales_Approval_View</fullName>
        <columns>Opportunity_ID__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Sub_Portfolio__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Status_Stage_Requested__c</columns>
        <columns>Approved_Status_Stage__c</columns>
        <columns>Reporting_Status__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Admin_View__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Reporting_Status__c</field>
            <operation>equals</operation>
            <value>Unqualified,Qualified</value>
        </filters>
        <label>Sales Approval View</label>
    </listViews>
    <listViews>
        <fullName>Start_this_Month</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>Reporting_Status__c</columns>
        <columns>Portfolio__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Win_Probability__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Total_Current_Revenue__c</columns>
        <columns>Total_Deal_Potential__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Hierarchy_Level__c</columns>
        <columns>Best_Probable_Worst__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporting_Status__c</field>
            <operation>equals</operation>
            <value>Unqualified,Qualified</value>
        </filters>
        <filters>
            <field>Consulting_Start__c</field>
            <operation>lessOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Outsourcing_Start__c</field>
            <operation>lessOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>4. Start Date &lt; Month-End</label>
    </listViews>
    <listViews>
        <fullName>Status_Stage_Entry_Dates</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Stage_1A_Entry_Date__c</columns>
        <columns>Stage_1B_Entry_Date__c</columns>
        <columns>Stage_2A_Entry_Date__c</columns>
        <columns>Stage_2B_Entry_Date__c</columns>
        <columns>Stage_3_Entry_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Status/Stage Entry Dates</label>
    </listViews>
    <listViews>
        <fullName>Time_Over_Target1</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>Portfolio__c</columns>
        <columns>Sub_Portfolio__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Total_Current_Revenue__c</columns>
        <columns>Total_Deal_Potential__c</columns>
        <columns>RFP_Release_Date__c</columns>
        <columns>Proposal_Submission_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Black_Hat_Review__c</columns>
        <columns>Top_Opportunity__c</columns>
        <columns>ToT_Category__c</columns>
        <columns>Capture_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Top_Opportunity__c</field>
            <operation>equals</operation>
            <value>AFS</value>
        </filters>
        <filters>
            <field>AFS_High_Priority_Deal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Reporting_Status__c</field>
            <operation>equals</operation>
            <value>Unqualified,Qualified</value>
        </filters>
        <label>Time Over Target</label>
        <sharedTo>
            <group>AFS_RO</group>
            <group>AFS_RW</group>
            <group>ASM_RO</group>
            <group>ASM_RW</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Time_Over_Target_ASM</fullName>
        <booleanFilter>(1 OR 4) AND 2 AND 3</booleanFilter>
        <columns>Portfolio__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Total_Current_Revenue__c</columns>
        <columns>Total_Deal_Potential__c</columns>
        <columns>RFP_Release_Date__c</columns>
        <columns>Proposal_Submission_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Top_Opportunity__c</columns>
        <columns>Capture_Status__c</columns>
        <columns>ToT_Category__c</columns>
        <columns>Black_Hat_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AFS_High_Priority_Deal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Portfolio__c</field>
            <operation>equals</operation>
            <value>Defense - ASM</value>
        </filters>
        <filters>
            <field>Reporting_Status__c</field>
            <operation>equals</operation>
            <value>Unqualified,Qualified</value>
        </filters>
        <filters>
            <field>Top_Opportunity__c</field>
            <operation>equals</operation>
            <value>AFS</value>
        </filters>
        <label>Time Over Target - ASM</label>
        <sharedTo>
            <group>AFS_RO</group>
            <group>AFS_RW</group>
            <group>ASM_RO</group>
            <group>ASM_RW</group>
            <group>Civilian_RO</group>
            <group>Civilian_RW</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Time_Over_Target_Civilian</fullName>
        <booleanFilter>(1 OR 4) and 2 and 3</booleanFilter>
        <columns>Portfolio__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Total_Current_Revenue__c</columns>
        <columns>Total_Deal_Potential__c</columns>
        <columns>RFP_Release_Date__c</columns>
        <columns>Proposal_Submission_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Top_Opportunity__c</columns>
        <columns>Capture_Status__c</columns>
        <columns>ToT_Category__c</columns>
        <columns>Black_Hat_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Top_Opportunity__c</field>
            <operation>equals</operation>
            <value>AFS</value>
        </filters>
        <filters>
            <field>Portfolio__c</field>
            <operation>equals</operation>
            <value>Civilian</value>
        </filters>
        <filters>
            <field>Reporting_Status__c</field>
            <operation>equals</operation>
            <value>Unqualified,Qualified</value>
        </filters>
        <filters>
            <field>AFS_High_Priority_Deal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Time Over Target - Civilian</label>
        <sharedTo>
            <group>AFS_RO</group>
            <group>AFS_RW</group>
            <group>ASM_RO</group>
            <group>ASM_RW</group>
            <group>Civilian_RO</group>
            <group>Civilian_RW</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Time_Over_Target_Defense</fullName>
        <booleanFilter>(1 or 4) aND 2 AND 3</booleanFilter>
        <columns>Portfolio__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Total_Current_Revenue__c</columns>
        <columns>Total_Deal_Potential__c</columns>
        <columns>RFP_Release_Date__c</columns>
        <columns>Proposal_Submission_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Top_Opportunity__c</columns>
        <columns>Capture_Status__c</columns>
        <columns>ToT_Category__c</columns>
        <columns>Black_Hat_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Top_Opportunity__c</field>
            <operation>equals</operation>
            <value>AFS</value>
        </filters>
        <filters>
            <field>Portfolio__c</field>
            <operation>equals</operation>
            <value>Defense</value>
        </filters>
        <filters>
            <field>Reporting_Status__c</field>
            <operation>equals</operation>
            <value>Unqualified,Qualified</value>
        </filters>
        <filters>
            <field>AFS_High_Priority_Deal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Time Over Target - Defense</label>
        <sharedTo>
            <group>AFS_RO</group>
            <group>AFS_RW</group>
            <group>ASM_RO</group>
            <group>ASM_RW</group>
            <group>Defense_RO</group>
            <group>Defense_RW</group>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ATS_Notes_is_required_at_Stage_2B</fullName>
        <active>true</active>
        <description>ATS Notes is required to enter Stage 2B</description>
        <errorConditionFormula>AND (
OR (
ISPICKVAL( Status_Stage_Requested__c , &quot;2B&quot;),
ISPICKVAL( Status_Stage_Requested__c , &quot;3&quot;)
),
ISBLANK (ATS_Notes__c)
)</errorConditionFormula>
        <errorDisplayField>ATS_Notes__c</errorDisplayField>
        <errorMessage>OPP-043-009: Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Pl_required_Stage_2B_Beyond</fullName>
        <active>true</active>
        <description>Account Plan OI% is required to enter Stage 2B</description>
        <errorConditionFormula>AND (
OR (
ISPICKVAL( Status_Stage_Requested__c , &quot;2B&quot;),
ISPICKVAL( Status_Stage_Requested__c , &quot;3&quot;)
),
 ISPICKVAL(Account_OI_Plan_Be_Met__c , &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Account_OI_Plan_Be_Met__c</errorDisplayField>
        <errorMessage>OPP-043-003: Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Contract_Sign_Date_before_dates</fullName>
        <active>true</active>
        <description>The Actual Contract Sign Date validation rule: This date field should never come before the Draft RFP Release Date, RFP Release Date, and Proposal Submission Date.</description>
        <errorConditionFormula>OR(OR( Actual_Contract_Sign_Date__c &lt;=   Draft_RFP_Release_Date__c  ,Actual_Contract_Sign_Date__c &lt;=  RFP_Release_Date__c ),Actual_Contract_Sign_Date__c &lt;=  Proposal_Submission_Date__c)</errorConditionFormula>
        <errorMessage>OPP-022: Please enter an Actual Contract Sign Date after the Draft RFP Release Date, RFP Release Date, and Proposal Submission Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Guarantee_Letter_of_Credit_is_req</fullName>
        <active>true</active>
        <description>Bank Guarantee/Letter of Credit is required to enter Stage 2A</description>
        <errorConditionFormula>OR 
( 
AND ( 
ISBLANK( TEXT( Bank_Guarantee_Letter_of_Credit__c )), 
OR ( 
ISPICKVAL( Status_Stage_Requested__c , &quot;2A&quot;), 
ISPICKVAL( Status_Stage_Requested__c , &quot;2B&quot;), 
ISPICKVAL( Status_Stage_Requested__c , &quot;3&quot;) 
), 
TEXT( Source__c) &lt;&gt; &quot;STaR&quot; 
), 
AND ( 
ISBLANK( TEXT(Bank_Guarantee_Letter_of_Credit__c )), 
TEXT( Source__c) = &quot;STaR&quot;, 
OR ( 
ISPICKVAL( Status_Stage_Requested__c , &quot;2A&quot;), 
ISPICKVAL( Status_Stage_Requested__c , &quot;2B&quot;), 
ISPICKVAL( Status_Stage_Requested__c , &quot;3&quot;) 
), 
OR( 
ISPICKVAL( PRIORVALUE(Status_Stage_Requested__c) , &quot;0&quot;), 
ISPICKVAL( PRIORVALUE(Status_Stage_Requested__c) , &quot;1A&quot;), 
ISPICKVAL( PRIORVALUE(Status_Stage_Requested__c) , &quot;1B&quot;) 
) 
) 
)</errorConditionFormula>
        <errorDisplayField>Bank_Guarantee_Letter_of_Credit__c</errorDisplayField>
        <errorMessage>OPP-042-002: Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Best_Probable_Worst_is_required</fullName>
        <active>true</active>
        <description>Best/Probable/Worst is required to enter Stage 1A</description>
        <errorConditionFormula>AND (
OR (
ISPICKVAL( Status_Stage_Requested__c , &quot;1A&quot;),
ISPICKVAL( Status_Stage_Requested__c , &quot;1B&quot;),
ISPICKVAL( Status_Stage_Requested__c , &quot;2A&quot;),
ISPICKVAL( Status_Stage_Requested__c , &quot;2B&quot;),
ISPICKVAL( Status_Stage_Requested__c , &quot;3&quot;)
),
ISBLANK(TEXT(Best_Probable_Worst__c))
)</errorConditionFormula>
        <errorDisplayField>Best_Probable_Worst__c</errorDisplayField>
        <errorMessage>OPP-041-002: Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_modify_Reporting_Status_Since</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Reporting_Status_Since__c ) &amp;&amp; NOT(OR($Profile.Name = &quot;AFS Sales Ops&quot; , 
    $Profile.Name = &quot;System Administrator&quot; ))</errorConditionFormula>
        <errorDisplayField>Reporting_Status_Since__c</errorDisplayField>
        <errorMessage>OPP-004: Only AFS Sales Ops users can change Reporting Status Since Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_modify_Stage_Field_Value</fullName>
        <active>true</active>
        <description>OPP-006</description>
        <errorConditionFormula>AND(
    ISCHANGED( StageName ),
    AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,   
    $Profile.Name &lt;&gt; &quot;AFS System Admin&quot;)
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>OPP-006: Post Opportunity creation, this field is system updated only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Client_Data_Prot_is_required_at_Stage_2B</fullName>
        <active>true</active>
        <description>Client Data Protection Risk Assessment is required to enter Stage 2B</description>
        <errorConditionFormula>OR
(
AND (
ISBLANK( TEXT(Client_Data_Protection_Risk_Assessment__c)),
OR (
ISPICKVAL( Status_Stage_Requested__c , &quot;2B&quot;),
ISPICKVAL( Status_Stage_Requested__c , &quot;3&quot;)
),
TEXT( Source__c) &lt;&gt; &quot;STaR&quot;
),
AND (
ISBLANK( TEXT(Client_Data_Protection_Risk_Assessment__c)),
TEXT( Source__c) = &quot;STaR&quot;,
OR (
ISPICKVAL( Status_Stage_Requested__c , &quot;2B&quot;),
ISPICKVAL( Status_Stage_Requested__c , &quot;3&quot;)
),
OR(
ISPICKVAL(  PRIORVALUE(Status_Stage_Requested__c) , &quot;0&quot;),
ISPICKVAL(  PRIORVALUE(Status_Stage_Requested__c) , &quot;1A&quot;),
ISPICKVAL(  PRIORVALUE(Status_Stage_Requested__c) , &quot;1B&quot;),
ISPICKVAL(  PRIORVALUE(Status_Stage_Requested__c) , &quot;2A&quot;)
)
)
)</errorConditionFormula>
        <errorDisplayField>Client_Data_Protection_Risk_Assessment__c</errorDisplayField>
        <errorMessage>OPP-043-011: Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Client_Data_Protection_should_not_be_No</fullName>
        <active>true</active>
        <description>If the field, Client Data Protection Risk Assessment Submitted has been selected as No, then the user should see a validation error.</description>
        <errorConditionFormula>ISPICKVAL( Client_Data_Protection_Risk_Assessment__c , &apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>Client_Data_Protection_Risk_Assessment__c</errorDisplayField>
        <errorMessage>OPP-064: No is not an acceptable answer. Please review the CDP checklist link in the Custom Links section and adjust response to Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Client_Industry_Area_of_Service_is_req</fullName>
        <active>true</active>
        <description>Client Industry/Area of Service is required to enter Stage 1A</description>
        <errorConditionFormula>AND (
OR (
ISPICKVAL( Status_Stage_Requested__c , &quot;1A&quot;),
ISPICKVAL( Status_Stage_Requested__c , &quot;1B&quot;),
ISPICKVAL( Status_Stage_Requested__c , &quot;2A&quot;),
ISPICKVAL( Status_Stage_Requested__c , &quot;2B&quot;),
ISPICKVAL( Status_Stage_Requested__c , &quot;3&quot;)
),
ISBLANK(Client_Industry_Area_of_Service__c)
)</errorConditionFormula>
        <errorDisplayField>Client_Industry_Area_of_Service__c</errorDisplayField>
        <errorMessage>OPP-041-011: Required</errorMessage>
    </validationRules>
</CustomObject>